<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DesktopLabel</string>
    
    <string name="app_name_4x">DesktopLabel (1x4)</string>
    <string name="app_name_3x">DesktopLabel (1x3)</string>
    <string name="app_name_2x">DesktopLabel (1x2)</string>
    
    <string name="app_nueva">New label</string>
    <string name="app_reconfigurar">Configure label</string>
    
    <string name="etiqueta_caption">Text</string>    
    <string name="icono">Icon</string>
    <string name="color_fondo">Back. color</string>
    <string name="color_texto">Text color</string>
    <string name="escoger_color">Pick color</string>
    <string name="escoger_icono">Pick icon</string>
    <string name="transparente">Transparent</string>
    <string name="vacio"></string>
    <string name="sin_icono">No icon</string>
    
    <string name="previsualizacion">Example</string>
    
    <string name="nueva_texto">
    	Write here the text of the new desktop label:
    </string>
    <string name="reconfigurar_texto">
    	Reconfigure your desktop label and click Accept to commit the changes:
    </string>
    <string name="boton_aceptar">Accept</string>
    
    <string name="widget_actualizado">The widget configuration has been updated</string>
    
    <!-- Diálogos SeROne -->
    
    <string name="serone_comun_aceptar">Accept</string>
    
    <string name="serone_color_titulo">Choose color</string>
    <string name="serone_color_texto">Pick a color and click the \'Accept\' button to close the dialog.</string>
    
    <string name="selector_color_rojo">Red</string>
    <string name="selector_color_verde">Green</string>
    <string name="selector_color_azul">Blue</string>
    <string name="selector_color_transparencia">Transp.</string>
    <string name="selector_vista_previa">Preview</string>
    
    <string name="serone_icono_titulo">Choose icon</string>
    <string name="serone_icono_texto">Pick an icon and click the \'Accept\' button to close the dialog.</string>
    
</resources>
